--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
+    "@maskito/angular": "^3.8.0",
+    "@maskito/core": "^3.8.0",
+    "@maskito/kit": "^3.8.0",
     "ionicons": "^7.0.0",
     "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
